prog/1stPartyLibs/quirrel/quirrel/testData/static_analyser/w273.diag.txt
ERROR: Unknown variable [x]
testData/static_analyser/w273.nut:3:0

x <- 6
^
return x


